Add admin module for topics

--- a/c18/learning_log/ll_env/pyvenv.cfg
+++ b/c18/learning_log/ll_env/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.11.3
 executable = /usr/bin/python3.11
-command = /home/mario/DEV/python/pcc/c18/learning_log/ll_env/bin/python -m venv /home/mario/DEV/python/pcc/c18/learning_log/ll_env
+command = /usr/bin/python -m venv /home/mario/DEV/python/python-crash-course/c18/learning_log/ll_env
