--- a/c18/learning_log/requirements.txt
+++ b/c18/learning_log/requirements.txt
@@ -1,224 +1,5 @@
-alabaster==0.7.13
-aniso8601==9.0.1
-anytree==2.8.0
-apipkg==3.0.1
-apparmor==3.1.3
-appdirs==1.4.4
-application-utility==1.3.2
-asciidoc==10.2.0
-asn1crypto==1.5.1
-astroid==2.15.5
-attrs==22.2.0
-autocommand==2.2.2
-Babel==2.12.1
-bcrypt==4.0.1
-Beaker==1.12.0
-beautifulsoup4==4.12.2
-btrfsutil==6.3
-CacheControl==0.12.11
-cached-property==1.5.2
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.1.0
-cheroot==9.0.0
-CherryPy==18.8.0
-click==8.1.3
-colorama==0.4.6
-commonmark==0.9.1
-contextlib2==21.6.0
-coverage==6.5.0
-cryptography==40.0.2
-cupshelpers==1.0
-Cython==0.29.34
-defusedxml==0.7.1
-dill==0.3.6
-distlib==0.3.6
-distro==1.8.0
-dnspython==2.3.0
-docker==6.1.2
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.20.1
-elasticsearch==7.9.0
-evdev==1.6.1
-exceptiongroup==1.1.1
-fastjsonschema==2.16.3
-filelock==3.12.0
-Flask==2.2.5
-Flask-RESTful==0.3.9
-future==0.18.3
-google-api-core==2.11.0
-google-api-python-client==2.86.0
-google-auth==2.16.2
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.59.0
-gpg==1.20.0
-grpcio==1.53.0
-html2text==2020.1.16
-html5lib==1.1
-httplib2==0.22.0
-idna==3.4
-imagesize==1.4.1
-importlib-metadata==5.0.0
-inflect==6.0.4
-iniconfig==2.0.0
-isodate==0.6.1
-isort==5.12.0
-itsdangerous==2.1.2
-jaraco.classes==3.2.3
-jaraco.collections==3.5.2
-jaraco.context==4.3.0
-jaraco.functools==3.6.0
-jaraco.text==3.11.1
-Jinja2==3.1.2
-joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
-keyutils==0.6
-lazy-object-proxy==1.9.0
-lensfun==0.3.3
-LibAppArmor==3.1.3
-libfdt==1.7.0
-libtorrent==2.0.8
-lit==15.0.7.dev0
-loguru==0.7.0
-logutils==0.3.5
-louis==3.25.0
-lxml==4.9.2
-lz4==4.3.2
-Mako==1.2.4
-mallard-ducktype==1.0.2
-manjaro-sdk==0.1
-Markdown==3.4.3
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-mccabe==0.7.0
-mdurl==0.1.2
-meson==1.1.0
-mock==3.0.5
-moddb==0.8.1
-more-itertools==9.1.0
-msgpack==1.0.5
-mutagen==1.46.0
-natsort==8.3.1
-netifaces==0.11.0
-netsnmp-python==1.0a1
-nftables==0.1
-nose==1.3.7
-npyscreen==4.10.5
-nspektr==0.4.0
-numpy==1.24.3
-ordered-set==4.1.0
-packaging==23.1
-pacman-mirrors==4.23.2
-pandas==2.0.3
-paramiko==2.11.1
-pbr==5.11.1
-pecan==1.4.2
-Pillow==9.5.0
-pkgconfig==1.5.5
-platformdirs==3.5.1
-pluggy==1.0.0
-ply==3.11
-pooch==1.7.0
-portend==3.1.0
-powerline-status==2.8.3
-prettytable==3.6.0
-prometheus-client==0.16.0
-protobuf==4.21.12
-pwquality==1.4.5
-py==1.11.1.dev0+g447bac51.d20230407
-pyaml==23.5.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.23.0
-pycodestyle==2.10.0
-pycparser==2.21
-pycups==2.0.1
-pycurl==7.45.2
-pydantic==1.10.7
-Pygments==2.15.1
-PyGObject==3.44.1
-PyJWT==2.6.0
-pylint==2.17.4
-PyNaCl==1.4.0
-PyOpenGL==3.1.6
-pyOpenSSL==23.1.1
-pyparsing==3.0.9
-PyQt5==5.15.9
-PyQt5-sip==12.12.1
-pyrate-limiter==2.10.0
-pyrsistent==0.19.3
-PySide6==6.5.0
-pysmbc==1.0.23
-PySocks==1.7.1
-pytest==7.3.1
-pytest-cov==4.0.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-magic==0.4.27
-pytoml==0.1.21
-pytz==2023.3
-PyYAML==6.0
-rencode==1.0.6
-reportlab==3.6.12
-repoze.lru==0.7
-requests==2.28.2
-resolvelib==1.0.1
-retrying==1.3.3
-rfc3987==1.3.8
-rich==13.3.5
-Routes==2.5.1
-rsa==4.9
-scikit-learn==1.2.2
-scipy==1.10.1
-shiboken6==6.5.0
-shiboken6-generator==6.5.0
-six==1.16.0
-smbus==1.1
-snowballstemmer==2.2.0
-soupsieve==2.4.1
-Sphinx==7.0.1
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-systemd-python==235
-TBB==0.2
-tempora==5.2.2
-tenacity==8.2.3.dev0+g548c5d4.d20230423
-texttable==1.6.7
-threadpoolctl==3.1.0
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.8
-toolz==0.12.0
-torbrowser-launcher==0.3.6
-tqdm==4.65.0
-trove-classifiers==2023.5.16
-typing_extensions==4.5.0
-tzdata==2023.3
-uc-micro-py==1.0.2
-udiskie==2.4.2
-uritemplate==4.1.1
-urllib3==1.26.15
-validate-pyproject==0.12.2.post1.dev0+g2940279.d20230508
-virtualenv==20.21.0
-waitress==2.1.2
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-WebOb==1.8.7
-websocket-client==1.5.1
-WebTest==3.0.0
-Werkzeug==2.3.2
-wrapt==1.14.1
-wxPython==4.2.0
-xmlsec==1.3.13
-xpra==4.4.4
-zc.lockfile==3.0.post1
-zipp==3.15.0
+asgiref==3.7.2
+Django==4.2.3
+django-bootstrap5==23.3
+sqlparse==0.4.4
+typing_extensions==4.7.1
